--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-colorama~=0.4.6
-pandas~=2.1.1
-setuptools~=68.1.2
-openpyxl~=3.1.2
-pyfiglet~=1.0.2
+colorama>=0.4.6
+pandas>=2.1.1
+setuptools>=68.1.2
+openpyxl>=3.1.2
+pyfiglet>=1.0.2
+tabulate>=0.9.0
