--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,8 +21,7 @@ jobs:
         pip install pylint
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py') > pylint_output.txt
-        cat pylint_output.txt
+        pylint $(git ls-files '*.py')
     - name: Test with pytest
       run: |
         pytest
